spacing fixes for empty, loading states

--- a/src/scss/phy/my-progress.scss
+++ b/src/scss/phy/my-progress.scss
@@ -13,8 +13,12 @@
   }
 }
 
-.attempts-over-time {
+.attempts-min-height {
   min-height: 480px;
+}
+
+.graph-min-height {
+  min-height: 320px;
 }
 
 .legend-item {
